http/src/main/java/occi/http/check/OcciParser.java
// $ANTLR 3.3 Nov 30, 2010 12:45:30 /home/smsnheck/Desktop/Occi.g 2011-03-21 10:45:26

package occi.http.check;

import java.io.IOException;
import java.util.ArrayList;
import java.util.HashMap;

import org.antlr.runtime.ANTLRStringStream;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.CharStream;
import org.antlr.runtime.CommonTokenStream;
import org.antlr.runtime.MismatchedSetException;
import org.antlr.runtime.ParserRuleReturnScope;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.antlr.runtime.debug.DebugEventListener;
import org.antlr.runtime.debug.DebugEventSocketProxy;
import org.antlr.runtime.debug.DebugParser;

public class OcciParser extends DebugParser {
	public static final String[] tokenNames = new String[] { "<invalid>",
			"<EOR>", "<DOWN>", "<UP>", "TERM_VALUE", "QUOTED_VALUE",
			"TARGET_VALUE", "DIGITS", "FLOAT", "URL", "QUOTE", "WS",
			"'Category'", "':'", "','", "';'", "'scheme'", "'='", "'class'",
			"'title'", "'rel'", "'location'", "'attributes'", "'actions'",
			"'Link'", "'<'", "'?action='", "'>'", "'self'", "'category'",
			"'X-OCCI-Attribute'", "'X-OCCI-Location'" };
	public static final int EOF = -1;
	public static final int T__12 = 12;
	public static final int T__13 = 13;
	public static final int T__14 = 14;
	public static final int T__15 = 15;
	public static final int T__16 = 16;
	public static final int T__17 = 17;
	public static final int T__18 = 18;
	public static final int T__19 = 19;
	public static final int T__20 = 20;
	public static final int T__21 = 21;
	public static final int T__22 = 22;
	public static final int T__23 = 23;
	public static final int T__24 = 24;
	public static final int T__25 = 25;
	public static final int T__26 = 26;
	public static final int T__27 = 27;
	public static final int T__28 = 28;
	public static final int T__29 = 29;
	public static final int T__30 = 30;
	public static final int T__31 = 31;
	public static final int TERM_VALUE = 4;
	public static final int QUOTED_VALUE = 5;
	public static final int TARGET_VALUE = 6;
	public static final int DIGITS = 7;
	public static final int FLOAT = 8;
	public static final int URL = 9;
	public static final int QUOTE = 10;
	public static final int WS = 11;

	// delegates
	// delegators

	public static final String[] ruleNames = new String[] { "invalidRule",
			"attribute_name_attr", "c_attributes_attr", "attribute_value_attr",
			"attribute_kv_attr", "link", "category_value", "category_values",
			"klass_attr", "scheme_attr", "location_attr", "location_values",
			"headers", "attribute", "self_attr", "term_attr", "target_attr",
			"location", "link_values", "category", "link_value",
			"actions_attr", "category_attr", "title_attr", "rel_attr",
			"attributes_attr", "attribute_attr" };
	public static final boolean[] decisionCanBacktrack = new boolean[] {
			false, // invalid decision
			false, false, false, false, false, false, false, false, false,
			false, false, false, false, false };

	public int ruleLevel = 0;

	public int getRuleLevel() {
		return ruleLevel;
	}

	public void incRuleLevel() {
		ruleLevel++;
	}

	public void decRuleLevel() {
		ruleLevel--;
	}

	public OcciParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT,
				new RecognizerSharedState());
	}

	public OcciParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy = new DebugEventSocketProxy(this, port,
				null);
		setDebugListener(proxy);
		try {
			proxy.handshake();
		} catch (IOException ioe) {
			reportError(ioe);
		}
	}

	public OcciParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg, new RecognizerSharedState());

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

	@Override
	public String[] getTokenNames() {
		return OcciParser.tokenNames;
	}

	@Override
	public String getGrammarFileName() {
		return "/home/smsnheck/Desktop/Occi.g";
	}

	public static String occi_categories = "occi.categories";
	public static String occi_links = "occi.links";
	public static String occi_attributes = "occi.attributes";
	public static String occi_locations = "occi.locations";
	static String occi_core_term = "occi.core.term";
	static String occi_core_scheme = "occi.core.scheme";
	static String occi_core_class = "occi.core.class";
	static String occi_core_class_kind = "kind";
	static String occi_core_class_mixin = "mixin";
	static String occi_core_class_action = "action";
	static String occi_core_title = "occi.core.title";
	static String occi_core_rel = "occi.core.rel";
	static String occi_core_location = "occi.core.location";
	static String occi_core_attributes = "occi.core.attributes";
	static String occi_core_actions = "occi.core.actions";
	static String occi_core_target = "occi.core.target";
	static String occi_core_actionterm = "occi.core.actionterm";
	static String occi_core_self = "occi.core.self";
	static String occi_core_category = "occi.core.category";

	private String last_error = "";

	// private HashMap allheaders = new HashMap();

	public static OcciParser getParser(String occiHeader) throws Exception {

		CharStream stream = new ANTLRStringStream(occiHeader);
		OcciLexer lexer = new OcciLexer(stream);
		CommonTokenStream tokenStream = new CommonTokenStream(lexer);
		OcciParser parser = new OcciParser(tokenStream);

		return parser;
	}

	public String getLastError() {
		return last_error;
	}

	private String removeQuotes(String cleanMe) {

		if (cleanMe.matches("^(\"|').*(\"|')$")) {
			cleanMe = cleanMe.substring(1, cleanMe.length() - 1);
		}

		return cleanMe;
	}

	// $ANTLR start "headers"
	// /home/smsnheck/Desktop/Occi.g:76:1: headers returns [HashMap value] : (
	// category | link | attribute | location )* ;
	public final HashMap headers() throws RecognitionException,
			OcciParserException {
		HashMap value = null;

		ArrayList category1 = null;

		ArrayList link2 = null;

		HashMap attribute3 = null;

		ArrayList location4 = null;

		try {
			dbg.enterRule(getGrammarFileName(), "headers");
			if (getRuleLevel() == 0) {
				dbg.commence();
			}
			incRuleLevel();
			dbg.location(76, 1);

			try {
				// /home/smsnheck/Desktop/Occi.g:76:48: ( ( category | link |
				// attribute | location )* )
				dbg.enterAlt(1);

				// /home/smsnheck/Desktop/Occi.g:77:26: ( category | link |
				// attribute | location )*
				{
					dbg.location(77, 26);

					value = new HashMap();
					ArrayList catList = new ArrayList();
					ArrayList linkList = new ArrayList();
					ArrayList attrList = new ArrayList();
					ArrayList locList = new ArrayList();

					dbg.location(84, 26);
					// /home/smsnheck/Desktop/Occi.g:84:26: ( category | link |
					// attribute | location )*
					try {
						dbg.enterSubRule(1);

						loop1: do {
							int alt1 = 5;
							try {
								dbg.enterDecision(1, decisionCanBacktrack[1]);

								switch (input.LA(1)) {
								case 12: {
									alt1 = 1;
								}
									break;
								case 24: {
									alt1 = 2;
								}
									break;
								case 30: {
									alt1 = 3;
								}
									break;
								case 31: {
									alt1 = 4;
								}
									break;

								}

							} finally {
								dbg.exitDecision(1);
							}

							switch (alt1) {
							case 1:
								dbg.enterAlt(1);

								// /home/smsnheck/Desktop/Occi.g:85:28: category
								{
									dbg.location(85, 28);
									pushFollow(FOLLOW_category_in_headers149);
									category1 = category();

									state._fsp--;

									dbg.location(85, 38);
									if (category1 != null) {
										catList.add(category1);
									}

								}
								break;
							case 2:
								dbg.enterAlt(2);

								// /home/smsnheck/Desktop/Occi.g:86:28: link
								{
									dbg.location(86, 28);
									pushFollow(FOLLOW_link_in_headers183);
									link2 = link();

									state._fsp--;

									dbg.location(86, 38);
									if (link2 != null) {
										linkList.add(link2);
									}

								}
								break;
							case 3:
								dbg.enterAlt(3);

								// /home/smsnheck/Desktop/Occi.g:87:28:
								// attribute
								{
									dbg.location(87, 28);
									pushFollow(FOLLOW_attribute_in_headers221);
									attribute3 = attribute();

									state._fsp--;

									dbg.location(87, 38);
									if (attribute3 != null) {
										attrList.add(attribute3);
									}

								}
								break;
							case 4:
								dbg.enterAlt(4);

								// /home/smsnheck/Desktop/Occi.g:88:28: location
								{
									dbg.location(88, 28);
									pushFollow(FOLLOW_location_in_headers254);
									location4 = location();

									state._fsp--;

									dbg.location(88, 38);
									if (location4 != null) {
										locList.add(location4);
									}

								}
								break;

							default:
								break loop1;
							}
						} while (true);
					} finally {
						dbg.exitSubRule(1);
					}

					dbg.location(90, 26);

					value.put(occi_categories, catList);
					value.put(occi_links, linkList);
					value.put(occi_attributes, attrList);
					value.put(occi_locations, locList);
					// value = allheaders;

				}

			}

			catch (RecognitionException rex) {

				last_error = getErrorHeader(rex) + " "
						+ getErrorMessage(rex, OcciParser.tokenNames);
				// System.out.println("Parser error: " + last_error);

				throw new OcciParserException(last_error);
			} finally {
			}
			dbg.location(97, 26);

		} finally {
			dbg.exitRule(getGrammarFileName(), "headers");
			decRuleLevel();
			if (getRuleLevel() == 0) {
				dbg.terminate();
			}
		}

		return value;
	}

	// $ANTLR end "headers"

	// $ANTLR start "category"
	// /home/smsnheck/Desktop/Occi.g:111:1: category returns [ArrayList cats] :
	// 'Category' ':' category_values ;
	public final ArrayList category() throws RecognitionException,
			OcciParserException {
		ArrayList cats = null;

		ArrayList category_values5 = null;

		try {
			dbg.enterRule(getGrammarFileName(), "category");
			if (getRuleLevel() == 0) {
				dbg.commence();
			}
			incRuleLevel();
			dbg.location(111, 1);

			try {
				// /home/smsnheck/Desktop/Occi.g:111:49: ( 'Category' ':'
				// category_values )
				dbg.enterAlt(1);

				// /home/smsnheck/Desktop/Occi.g:112:26: 'Category' ':'
				// category_values
				{
					dbg.location(112, 26);
					match(input, 12, FOLLOW_12_in_category392);
					dbg.location(112, 37);
					match(input, 13, FOLLOW_13_in_category394);
					dbg.location(113, 26);
					pushFollow(FOLLOW_category_values_in_category421);
					category_values5 = category_values();

					state._fsp--;

					dbg.location(113, 41);

					cats = category_values5;

				}

			}

			catch (RecognitionException rex) {

				last_error = getErrorHeader(rex) + " "
						+ getErrorMessage(rex, OcciParser.tokenNames);
				// System.out.println("Parser error: " + last_error);

				throw new OcciParserException(last_error);
			} finally {
			}
			dbg.location(116, 26);

		} finally {
			dbg.exitRule(getGrammarFileName(), "category");
			decRuleLevel();
			if (getRuleLevel() == 0) {
				dbg.terminate();
			}
		}

		return cats;
	}

	// $ANTLR end "category"

	// $ANTLR start "category_values"
	// /home/smsnheck/Desktop/Occi.g:118:1: category_values returns [ArrayList
	// cats] : cv1= category_value ( ',' cv2= category_value )* ;
	public final ArrayList category_values() throws RecognitionException,
			OcciParserException {
		ArrayList cats = null;

		HashMap cv1 = null;

		HashMap cv2 = null;

		try {
			dbg.enterRule(getGrammarFileName(), "category_values");
			if (getRuleLevel() == 0) {
				dbg.commence();
			}
			incRuleLevel();
			dbg.location(118, 1);

			try {
				// /home/smsnheck/Desktop/Occi.g:118:49: (cv1= category_value (
				// ',' cv2= category_value )* )
				dbg.enterAlt(1);

				// /home/smsnheck/Desktop/Occi.g:119:25: cv1= category_value (
				// ',' cv2= category_value )*
				{
					dbg.location(119, 28);
					pushFollow(FOLLOW_category_value_in_category_values493);
					cv1 = category_value();

					state._fsp--;

					dbg.location(119, 43);

					cats = new ArrayList();
					cats.add(cv1);

					dbg.location(123, 25);
					// /home/smsnheck/Desktop/Occi.g:123:25: ( ',' cv2=
					// category_value )*
					try {
						dbg.enterSubRule(2);

						loop2: do {
							int alt2 = 2;
							try {
								dbg.enterDecision(2, decisionCanBacktrack[2]);

								int LA2_0 = input.LA(1);

								if ((LA2_0 == 14)) {
									alt2 = 1;
								}

							} finally {
								dbg.exitDecision(2);
							}

							switch (alt2) {
							case 1:
								dbg.enterAlt(1);

								// /home/smsnheck/Desktop/Occi.g:124:25: ','
								// cv2= category_value
								{
									dbg.location(124, 25);
									match(input, 14,
											FOLLOW_14_in_category_values546);
									dbg.location(124, 32);
									pushFollow(FOLLOW_category_value_in_category_values550);
									cv2 = category_value();

									state._fsp--;

									dbg.location(124, 47);

									cats.add(cv2);

								}
								break;

							default:
								break loop2;
							}
						} while (true);
					} finally {
						dbg.exitSubRule(2);
					}

				}

			}

			catch (RecognitionException rex) {

				last_error = getErrorHeader(rex) + " "
						+ getErrorMessage(rex, OcciParser.tokenNames);
				// System.out.println("Parser error: " + last_error);

				throw new OcciParserException(last_error);
			} finally {
			}
			dbg.location(128, 25);

		} finally {
			dbg.exitRule(getGrammarFileName(), "category_values");
			decRuleLevel();
			if (getRuleLevel() == 0) {
				dbg.terminate();
			}
		}

		return cats;
	}

	// $ANTLR end "category_values"

	// $ANTLR start "category_value"
	// /home/smsnheck/Desktop/Occi.g:130:1: category_value returns [HashMap cat]
	// : term_attr scheme_attr klass_attr ( title_attr )? ( rel_attr )? (
	// location_attr )? ( c_attributes_attr )? ( actions_attr )? ;
	public final HashMap category_value() throws RecognitionException,
			OcciParserException {
		HashMap cat = null;

		String term_attr6 = null;

		String scheme_attr7 = null;

		String klass_attr8 = null;

		String title_attr9 = null;

		String rel_attr10 = null;

		String location_attr11 = null;

		String c_attributes_attr12 = null;

		String actions_attr13 = null;

		try {
			dbg.enterRule(getGrammarFileName(), "category_value");
			if (getRuleLevel() == 0) {
				dbg.commence();
			}
			incRuleLevel();
			dbg.location(130, 1);

			try {
				// /home/smsnheck/Desktop/Occi.g:130:46: ( term_attr scheme_attr
				// klass_attr ( title_attr )? ( rel_attr )? ( location_attr )? (
				// c_attributes_attr )? ( actions_attr )? )
				dbg.enterAlt(1);

				// /home/smsnheck/Desktop/Occi.g:131:25: term_attr scheme_attr
				// klass_attr ( title_attr )? ( rel_attr )? ( location_attr )? (
				// c_attributes_attr )? ( actions_attr )?
				{
					dbg.location(131, 25);
					pushFollow(FOLLOW_term_attr_in_category_value647);
					term_attr6 = term_attr();

					state._fsp--;

					dbg.location(131, 35);
					pushFollow(FOLLOW_scheme_attr_in_category_value649);
					scheme_attr7 = scheme_attr();

					state._fsp--;

					dbg.location(131, 47);
					pushFollow(FOLLOW_klass_attr_in_category_value651);
					klass_attr8 = klass_attr();

					state._fsp--;

					dbg.location(131, 58);
					// /home/smsnheck/Desktop/Occi.g:131:58: ( title_attr )?
					int alt3 = 2;
					try {
						dbg.enterSubRule(3);
						try {
							dbg.enterDecision(3, decisionCanBacktrack[3]);

							int LA3_0 = input.LA(1);

							if ((LA3_0 == 15)) {
								int LA3_1 = input.LA(2);

								if ((LA3_1 == 19)) {
									alt3 = 1;
								}
							}
						} finally {
							dbg.exitDecision(3);
						}

						switch (alt3) {
						case 1:
							dbg.enterAlt(1);

							// /home/smsnheck/Desktop/Occi.g:131:58: title_attr
							{
								dbg.location(131, 58);
								pushFollow(FOLLOW_title_attr_in_category_value653);
								title_attr9 = title_attr();

								state._fsp--;

							}
							break;

						}
					} finally {
						dbg.exitSubRule(3);
					}

					dbg.location(131, 70);
					// /home/smsnheck/Desktop/Occi.g:131:70: ( rel_attr )?
					int alt4 = 2;
					try {
						dbg.enterSubRule(4);
						try {
							dbg.enterDecision(4, decisionCanBacktrack[4]);

							int LA4_0 = input.LA(1);

							if ((LA4_0 == 15)) {
								int LA4_1 = input.LA(2);

								if ((LA4_1 == 20)) {
									alt4 = 1;
								}
							}
						} finally {
							dbg.exitDecision(4);
						}

						switch (alt4) {
						case 1:
							dbg.enterAlt(1);

							// /home/smsnheck/Desktop/Occi.g:131:70: rel_attr
							{
								dbg.location(131, 70);
								pushFollow(FOLLOW_rel_attr_in_category_value656);
								rel_attr10 = rel_attr();

								state._fsp--;

							}
							break;

						}
					} finally {
						dbg.exitSubRule(4);
					}

					dbg.location(131, 80);
					// /home/smsnheck/Desktop/Occi.g:131:80: ( location_attr )?
					int alt5 = 2;
					try {
						dbg.enterSubRule(5);
						try {
							dbg.enterDecision(5, decisionCanBacktrack[5]);

							int LA5_0 = input.LA(1);

							if ((LA5_0 == 15)) {
								int LA5_1 = input.LA(2);

								if ((LA5_1 == 21)) {
									alt5 = 1;
								}
							}
						} finally {
							dbg.exitDecision(5);
						}

						switch (alt5) {
						case 1:
							dbg.enterAlt(1);

							// /home/smsnheck/Desktop/Occi.g:131:80:
							// location_attr
							{
								dbg.location(131, 80);
								pushFollow(FOLLOW_location_attr_in_category_value659);
								location_attr11 = location_attr();

								state._fsp--;

							}
							break;

						}
					} finally {
						dbg.exitSubRule(5);
					}

					dbg.location(131, 95);
					// /home/smsnheck/Desktop/Occi.g:131:95: ( c_attributes_attr
					// )?
					int alt6 = 2;
					try {
						dbg.enterSubRule(6);
						try {
							dbg.enterDecision(6, decisionCanBacktrack[6]);

							int LA6_0 = input.LA(1);

							if ((LA6_0 == 15)) {
								int LA6_1 = input.LA(2);

								if ((LA6_1 == 22)) {
									alt6 = 1;
								}
							}
						} finally {
							dbg.exitDecision(6);
						}

						switch (alt6) {
						case 1:
							dbg.enterAlt(1);

							// /home/smsnheck/Desktop/Occi.g:131:95:
							// c_attributes_attr
							{
								dbg.location(131, 95);
								pushFollow(FOLLOW_c_attributes_attr_in_category_value662);
								c_attributes_attr12 = c_attributes_attr();

								state._fsp--;

							}
							break;

						}
					} finally {
						dbg.exitSubRule(6);
					}

					dbg.location(131, 114);
					// /home/smsnheck/Desktop/Occi.g:131:114: ( actions_attr )?
					int alt7 = 2;
					try {
						dbg.enterSubRule(7);
						try {
							dbg.enterDecision(7, decisionCanBacktrack[7]);

							int LA7_0 = input.LA(1);

							if ((LA7_0 == 15)) {
								alt7 = 1;
							}
						} finally {
							dbg.exitDecision(7);
						}

						switch (alt7) {
						case 1:
							dbg.enterAlt(1);

							// /home/smsnheck/Desktop/Occi.g:131:114:
							// actions_attr
							{
								dbg.location(131, 114);
								pushFollow(FOLLOW_actions_attr_in_category_value665);
								actions_attr13 = actions_attr();

								state._fsp--;

							}
							break;

						}
					} finally {
						dbg.exitSubRule(7);
					}

					dbg.location(131, 127);

					cat = new HashMap();

					cat.put(occi_core_term, term_attr6);
					cat.put(occi_core_scheme, scheme_attr7);
					cat.put(occi_core_class, klass_attr8);

					if (title_attr9 != null) {
						cat.put(occi_core_title, title_attr9);
					}

					if (rel_attr10 != null) {
						cat.put(occi_core_rel, rel_attr10);
					}

					if (location_attr11 != null) {
						cat.put(occi_core_location, location_attr11);
					}

					if (c_attributes_attr12 != null) {
						cat.put(occi_core_attributes, c_attributes_attr12);
					}

					if (actions_attr13 != null) {
						cat.put(occi_core_actions, actions_attr13);
					}

				}

			}

			catch (RecognitionException rex) {

				last_error = getErrorHeader(rex) + " "
						+ getErrorMessage(rex, OcciParser.tokenNames);
				// System.out.println("Parser error: " + last_error);

				throw new OcciParserException(last_error);
			} finally {
			}
			dbg.location(153, 26);

		} finally {
			dbg.exitRule(getGrammarFileName(), "category_value");
			decRuleLevel();
			if (getRuleLevel() == 0) {
				dbg.terminate();
			}
		}

		return cat;
	}

	// $ANTLR end "category_value"

	// $ANTLR start "term_attr"
	// /home/smsnheck/Desktop/Occi.g:155:1: term_attr returns [String value] :
	// TERM_VALUE ;
	public final String term_attr() throws RecognitionException,
			OcciParserException {
		String value = null;

		Token TERM_VALUE14 = null;

		try {
			dbg.enterRule(getGrammarFileName(), "term_attr");
			if (getRuleLevel() == 0) {
				dbg.commence();
			}
			incRuleLevel();
			dbg.location(155, 1);

			try {
				// /home/smsnheck/Desktop/Occi.g:155:47: ( TERM_VALUE )
				dbg.enterAlt(1);

				// /home/smsnheck/Desktop/Occi.g:156:25: TERM_VALUE
				{
					dbg.location(156, 25);
					TERM_VALUE14 = (Token) match(input, TERM_VALUE,
							FOLLOW_TERM_VALUE_in_term_attr742);
					dbg.location(156, 35);

					value = (TERM_VALUE14 != null ? TERM_VALUE14.getText()
							: null);

				}

			}

			catch (RecognitionException rex) {

				last_error = getErrorHeader(rex) + " "
						+ getErrorMessage(rex, OcciParser.tokenNames);
				// System.out.println("Parser error: " + last_error);

				throw new OcciParserException(last_error);
			} finally {
			}
			dbg.location(159, 25);

		} finally {
			dbg.exitRule(getGrammarFileName(), "term_attr");
			decRuleLevel();
			if (getRuleLevel() == 0) {
				dbg.terminate();
			}
		}

		return value;
	}

	// $ANTLR end "term_attr"

	// $ANTLR start "scheme_attr"
	// /home/smsnheck/Desktop/Occi.g:162:1: scheme_attr returns [String value] :
	// ';' 'scheme' '=' QUOTED_VALUE ;
	public final String scheme_attr() throws RecognitionException,
			OcciParserException {
		String value = null;

		Token QUOTED_VALUE15 = null;

		try {
			dbg.enterRule(getGrammarFileName(), "scheme_attr");
			if (getRuleLevel() == 0) {
				dbg.commence();
			}
			incRuleLevel();
			dbg.location(162, 1);

			try {
				// /home/smsnheck/Desktop/Occi.g:162:47: ( ';' 'scheme' '='
				// QUOTED_VALUE )
				dbg.enterAlt(1);

				// /home/smsnheck/Desktop/Occi.g:163:25: ';' 'scheme' '='
				// QUOTED_VALUE
				{
					dbg.location(163, 25);
					match(input, 15, FOLLOW_15_in_scheme_attr816);
					dbg.location(163, 29);
					match(input, 16, FOLLOW_16_in_scheme_attr818);
					dbg.location(163, 38);
					match(input, 17, FOLLOW_17_in_scheme_attr820);
					dbg.location(164, 25);
					QUOTED_VALUE15 = (Token) match(input, QUOTED_VALUE,
							FOLLOW_QUOTED_VALUE_in_scheme_attr846);
					dbg.location(164, 37);

					value = removeQuotes((QUOTED_VALUE15 != null ? QUOTED_VALUE15
							.getText()
							: null));

				}

			}

			catch (RecognitionException rex) {

				last_error = getErrorHeader(rex) + " "
						+ getErrorMessage(rex, OcciParser.tokenNames);
				// System.out.println("Parser error: " + last_error);

				throw new OcciParserException(last_error);
			} finally {
			}
			dbg.location(167, 25);

		} finally {
			dbg.exitRule(getGrammarFileName(), "scheme_attr");
			decRuleLevel();
			if (getRuleLevel() == 0) {
				dbg.terminate();
			}
		}

		return value;
	}

	// $ANTLR end "scheme_attr"

	// $ANTLR start "klass_attr"
	// /home/smsnheck/Desktop/Occi.g:169:1: klass_attr returns [String value] :
	// ';' 'class' '=' QUOTED_VALUE ;
	public final String klass_attr() throws RecognitionException,
			OcciParserException {
		String value = null;

		Token QUOTED_VALUE16 = null;

		try {
			dbg.enterRule(getGrammarFileName(), "klass_attr");
			if (getRuleLevel() == 0) {
				dbg.commence();
			}
			incRuleLevel();
			dbg.location(169, 1);

			try {
				// /home/smsnheck/Desktop/Occi.g:169:47: ( ';' 'class' '='
				// QUOTED_VALUE )
				dbg.enterAlt(1);

				// /home/smsnheck/Desktop/Occi.g:170:25: ';' 'class' '='
				// QUOTED_VALUE
				{
					dbg.location(170, 25);
					match(input, 15, FOLLOW_15_in_klass_attr920);
					dbg.location(170, 29);
					match(input, 18, FOLLOW_18_in_klass_attr922);
					dbg.location(170, 37);
					match(input, 17, FOLLOW_17_in_klass_attr924);
					dbg.location(171, 25);
					QUOTED_VALUE16 = (Token) match(input, QUOTED_VALUE,
							FOLLOW_QUOTED_VALUE_in_klass_attr950);
					dbg.location(171, 37);

					String klass = removeQuotes((QUOTED_VALUE16 != null ? QUOTED_VALUE16
							.getText()
							: null));

					if (!(klass.equals(occi_core_class_kind)
							|| klass.equals(occi_core_class_mixin) || klass
							.equals(occi_core_class_action))) {
						System.out
								.println("the 'class' attribute's value can only be ['kind', 'mixin', 'action']");
						// throw new
						// OcciParserException("the 'class' attribute's value can only be ['kind', 'mixin', 'action']");
					}
					value = klass;

				}

			}

			catch (RecognitionException rex) {

				last_error = getErrorHeader(rex) + " "
						+ getErrorMessage(rex, OcciParser.tokenNames);
				// System.out.println("Parser error: " + last_error);

				throw new OcciParserException(last_error);
			} finally {
			}
			dbg.location(182, 25);

		} finally {
			dbg.exitRule(getGrammarFileName(), "klass_attr");
			decRuleLevel();
			if (getRuleLevel() == 0) {
				dbg.terminate();
			}
		}

		return value;
	}

	// $ANTLR end "klass_attr"

	// $ANTLR start "title_attr"
	// /home/smsnheck/Desktop/Occi.g:184:1: title_attr returns [String value] :
	// ';' 'title' '=' QUOTED_VALUE ;
	public final String title_attr() throws RecognitionException,
			OcciParserException {
		String value = null;

		Token QUOTED_VALUE17 = null;
